# gear-code

./: .gitignore  README.md  pyproject.toml
docs/decisions/: 0004-agent-loop-progress-events.md
src/gear_code/: __init__.py  cli.py  config.py  errors.py  tui.py  tui_app.py
src/gear_code/agent/: compaction.py  events.py  history.py  loop.py
src/gear_code/model/: __init__.py  client.py  responses.py  transport.py
src/gear_code/store/: __init__.py  base.py  jsonl.py  memory.py
src/gear_code/tools/: __init__.py  base.py  configured.py  filesystem.py  filesystem_search.py  patch.py  registry.py  runtimes.py  shell.py  validation.py  web_fetch.py  web_search.py
tests/: test_agent_loop.py  test_cli.py  test_compaction.py  test_config.py  test_model_client.py  test_responses.py  test_store.py  test_tools.py  test_tui.py  test_web_fetch.py  test_web_search.py
