[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gear-code"
version = "0.1.0"
description = "A minimal educational coding agent using Responses API-compatible endpoints."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = []

[project.scripts]
gear = "gear_code.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
